--- a/html/style.css
+++ b/html/style.css
@@ -1,111 +1,13 @@
-<style>
 
-.bodywrap {
-  width: 80%;
-  margin: auto;
-}
-.header {
-  flex: 1 0 auto;
-  background-color: rgb(250, 94, 94);
-  padding: 10px 25px 10px 25px;
-  border-radius: 25px;
-}
-.wrapper {
-  display: flex;
-}
-.body1 {
-  
-  background-color:lightblue;
-  padding: 0px 0px 0px 0px;
-  border-radius: 25px;
-  width: 50%;
-  
+.column {
+  float: left;
 }
 
-.body2 {
-  
-  background-color:grey;
-  padding: 10px 25px 10px 25px;
-  border-radius: 25px;
-  width: 50%;
-  
-  
-}
-.body3 {
-  flex: 1 0 auto;
-  background-color:lightgreen;
-  padding: 10px 25px 10px 25px;
-  border-radius: 25px;
+.left, .right {
+  width: 25%;
 }
 
-.body4 {
-  
-  background-color:orange;
-  padding: 0px 0px 0px 0px;
-  border-radius: 25px;
-  width: 50%;
-}
-.body5 {
-  
-  background-color:rgb(0, 0, 0);
-  padding: 0px 0px 0px 0px;
-  border-radius: 25px;
+.middle {
   width: 50%;
 }
 
-.body6 {
-  
-  background-color:rgb(28, 189, 28);
-  padding: 10px 25px 10px 25px;
-  border-radius: 25px;
- 
-  
-}
-.body7 {
-  
-  background-color:rgb(32, 177, 32);
-  padding: 0px 0px 0px 0px;
-  border-radius: 25px;
-  width: 50%;
-  
-}
-.body8 {
-  
-  background-color:rgb(32, 114, 177);
-  padding: 0px 0px 0px 0px;
-  border-radius: 25px;
-  width: 50%;
-  
-}
-.body9 {
-  
-  background-color:rgb(177, 32, 121);
-  padding: 0px 0px 0px 0px;
-  border-radius: 25px;
-  width: 50%;
-  
-}
-.youtube {
-  
-  background-color:honeydew;
-  padding: 10px 25px 10px 25px;
-  border-radius: 25px;
-  
-}
-
-.youtube1 {
-  background-color:orange;
-  padding: 0px 0px 0px 0px;
-  border-radius: 25px;
-
-}
-.youtube2 {
-  background-color:orange;
-  padding: 0px 0px 0px 0px;
-  border-radius: 25px;
-
-}
-
-
-
-</style>
